# XuYa-Tools

./: .prettierignore  .prettierrc.json  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: frontend.yml  release.yml  rust.yml
design-mockups/: index.html  layout-dock.html  layout-grid.html  layout-palette.html  layout-sidebar.html  layout-split.html  layout-tabs.html  shared.css  shared.js  toolbody.js
scripts/: bump-version.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  widget.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_client.rs  lib.rs  main.rs  port_check.rs  sys_monitor.rs
src-tauri/src/cli_config/: backup.rs  balance.rs  claude.rs  codex.rs  mod.rs  model_fetch.rs  store.rs  types.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/proxy/: mod.rs  server.rs  takeover.rs  transform.rs  types.rs
src-tauri/src/usage/: logger.rs  mod.rs  stats.rs  types.rs
src/components/cli/: CliPanel.vue  ProxyPanel.vue  UsagePanel.vue
src/components/home/: SearchBar.vue  ToolCard.vue
src/components/layout/: AppLayout.vue  AppTitleBar.vue  AppToolBar.vue  ErrorBoundary.vue  LayoutSwitcher.vue  ToolMasterDetail.vue  ToolShell.vue
src/components/ui/: BaseButton.vue  BaseCard.vue  BaseInput.vue  BrandIcon.vue  CodeView.vue  ToastHost.vue
src/composables/: useCliConfig.ts  useClipboard.ts  useCollapsedCategories.ts  useFavorites.ts  useHttpTool.ts  useLayout.ts  useSystemStats.ts  useTheme.ts  useToast.ts  useToolState.ts  useUpdater.ts  useUsageStats.ts  useWidget.ts  useWindow.ts  useWsTool.ts
src/composables/__tests__/: useFavorites.test.ts  useToast.test.ts  useToolState.test.ts
src/config/: aiIcons.ts  providerPresets.ts  tools.ts
src/router/: index.ts
src/styles/: base.css  theme.css
src/types/: sm-crypto.d.ts
src/utils/: qrcode.ts
src/utils/__tests__/: qrcode.test.ts
src/views/: HomeView.vue  SettingsView.vue  WidgetView.vue
src/views/tools/: AiChatView.vue  BaseConverter.vue  CliManager.vue  CodeBeautify.vue  ColorTool.vue  CronParser.vue  CryptoTool.vue  CsvTool.vue  DataGenerator.vue  DateMath.vue  EncodingTool.vue  FormatConverter.vue  HashGenerator.vue  HttpStatusTool.vue  HttpTool.vue  IdGenerator.vue  ImageTool.vue  IpCalculator.vue  JsonDiff.vue  JsonFormatter.vue  JsonToCode.vue  JwtDecoder.vue  KeyPairTool.vue  LoremGenerator.vue  MarkdownPreview.vue  PortCheck.vue  ProxyDashboard.vue  ProxyManager.vue  QrCodeDecoder.vue  QrCodeTool.vue  RedactTool.vue  (+8 more)
