[package]
name = "xuya-tools"
version = "1.0.2"
description = "XuYa Tools - 程序员日常开发工具箱"
authors = ["XuYa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name a unique and never conflicting with other crates.
name = "xuya_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ===== CLI 配置 / 代理 / 统计 后端依赖 =====
dirs = "5"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }

# WebSocket 支持 (HTTP 工具复用 reqwest)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# 本地代理所需依赖
axum = { version = "0.7", features = ["http1"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
hyper-tls = "0.6"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
async-stream = "0.3"

# 请求日志存储
rusqlite = { version = "0.31", features = ["bundled"] }

# 网络接口枚举
if-addrs = "0.7"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
